tests/snapshots/cli__follow_with_malformed_config@centerpiece_malformed.snap
---
source: tests/cli.rs
assertion_line: 735
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/centerpiece.flake.nix"
    - "--lock-file"
    - "[FIXTURES]/centerpiece.flake.lock"
    - "--config"
    - "[FIXTURES]/malformed.config.toml"
    - "--diff"
    - follow
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: failed to parse config file '[FIXTURES]/malformed.config.toml'
  caused by: TOML parse error at line 3, column 13
  |
3 | [follow.auto
  |             ^
unclosed table, expected `]`
